Adding configure form to module info

--- a/os2web_meetings.info.yml
+++ b/os2web_meetings.info.yml
@@ -9,4 +9,4 @@ dependencies:
   - drupal:text
   - migrate_plus
   - migrate_tools
-#configure: os2web_borgerdk.settings_form
+configure: os2web_meetings.settings_form
