--- a/config/install/core.entity_view_display.node.os2web_meetings_meeting.teaser.yml
+++ b/config/install/core.entity_view_display.node.os2web_meetings_meeting.teaser.yml
@@ -1,4 +1,4 @@
-langcode: en
+langcode: da
 status: true
 dependencies:
   config:
@@ -17,35 +17,47 @@ dependencies:
     - field.field.node.os2web_meetings_meeting.field_os2web_m_type
     - node.type.os2web_meetings_meeting
   module:
-    - text
+    - datetime
     - user
 id: node.os2web_meetings_meeting.teaser
 targetEntityType: node
 bundle: os2web_meetings_meeting
 mode: teaser
 content:
-  body:
+  field_os2web_m_committee:
+    type: entity_reference_label
+    weight: 2
+    region: content
     label: hidden
-    type: text_summary_or_trimmed
-    weight: 101
     settings:
-      trim_length: 600
+      link: true
     third_party_settings: {  }
+  field_os2web_m_start_date:
+    type: datetime_default
+    weight: 1
     region: content
-  links:
-    weight: 100
-    settings: {  }
+    label: hidden
+    settings:
+      format_type: medium
+      timezone_override: ''
     third_party_settings: {  }
+  field_os2web_m_type:
+    type: string
+    weight: 0
     region: content
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
 hidden:
+  body: true
   field_os2web_m_addendum: true
   field_os2web_m_bps: true
-  field_os2web_m_committee: true
   field_os2web_m_doc: true
   field_os2web_m_end_date: true
   field_os2web_m_esdh_id: true
   field_os2web_m_location: true
   field_os2web_m_meet_id: true
   field_os2web_m_source: true
-  field_os2web_m_start_date: true
-  field_os2web_m_type: true
+  langcode: true
+  links: true
