--- a/os2web_meetings.info.yml
+++ b/os2web_meetings.info.yml
@@ -5,6 +5,7 @@ package: OS2Web
 core: 8.x
 core_version_requirement: ^8 || ^9
 dependencies:
+  - better_exposed_filters
   - drupal:migrate
   - drupal:text
   - migrate_plus
