--- a/config/install/core.entity_form_display.node.os2web_meetings_bp.default.yml
+++ b/config/install/core.entity_form_display.node.os2web_meetings_bp.default.yml
@@ -1,14 +1,18 @@
-langcode: en
+langcode: da
 status: true
 dependencies:
   config:
     - field.field.node.os2web_meetings_bp.body
     - field.field.node.os2web_meetings_bp.field_os2web_m_bp_bpas
     - field.field.node.os2web_meetings_bp.field_os2web_m_bp_closed
+    - field.field.node.os2web_meetings_bp.field_os2web_m_bp_enclosures
     - field.field.node.os2web_meetings_bp.field_os2web_m_esdh_id
     - node.type.os2web_meetings_bp
   module:
+    - content_moderation
+    - file
     - path
+    - scheduler
     - text
 id: node.os2web_meetings_bp.default
 targetEntityType: node
@@ -48,6 +52,13 @@ content:
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
+  field_os2web_m_bp_enclosures:
+    weight: 126
+    settings:
+      progress_indicator: throbber
+    third_party_settings: {  }
+    type: file_generic
+    region: content
   field_os2web_m_esdh_id:
     weight: 124
     settings:
@@ -56,6 +67,19 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  langcode:
+    type: language_select
+    weight: 2
+    region: content
+    settings:
+      include_locked: true
+    third_party_settings: {  }
+  moderation_state:
+    type: moderation_state_default
+    weight: 100
+    settings: {  }
+    region: content
+    third_party_settings: {  }
   path:
     type: path
     weight: 30
@@ -68,6 +92,12 @@ content:
       display_label: true
     weight: 15
     region: content
+    third_party_settings: {  }
+  publish_on:
+    type: datetime_timestamp_no_default
+    weight: 30
+    region: content
+    settings: {  }
     third_party_settings: {  }
   status:
     type: boolean_checkbox
@@ -100,5 +130,11 @@ content:
       placeholder: ''
       match_limit: 10
     region: content
+    third_party_settings: {  }
+  unpublish_on:
+    type: datetime_timestamp_no_default
+    weight: 30
+    region: content
+    settings: {  }
     third_party_settings: {  }
 hidden: {  }
