--- a/config/install/core.entity_form_display.node.os2web_meetings_bpa.default.yml
+++ b/config/install/core.entity_form_display.node.os2web_meetings_bpa.default.yml
@@ -1,4 +1,4 @@
-langcode: en
+langcode: da
 status: true
 dependencies:
   config:
@@ -7,8 +7,10 @@ dependencies:
     - field.field.node.os2web_meetings_bpa.field_os2web_m_esdh_id
     - node.type.os2web_meetings_bpa
   module:
+    - content_moderation
     - file
     - path
+    - scheduler
     - text
 id: node.os2web_meetings_bpa.default
 targetEntityType: node
@@ -46,6 +48,19 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  langcode:
+    type: language_select
+    weight: 2
+    region: content
+    settings:
+      include_locked: true
+    third_party_settings: {  }
+  moderation_state:
+    type: moderation_state_default
+    weight: 100
+    settings: {  }
+    region: content
+    third_party_settings: {  }
   path:
     type: path
     weight: 30
@@ -58,6 +73,12 @@ content:
       display_label: true
     weight: 15
     region: content
+    third_party_settings: {  }
+  publish_on:
+    type: datetime_timestamp_no_default
+    weight: 30
+    region: content
+    settings: {  }
     third_party_settings: {  }
   status:
     type: boolean_checkbox
@@ -90,5 +111,11 @@ content:
       placeholder: ''
       match_limit: 10
     region: content
+    third_party_settings: {  }
+  unpublish_on:
+    type: datetime_timestamp_no_default
+    weight: 30
+    region: content
+    settings: {  }
     third_party_settings: {  }
 hidden: {  }
