--- a/config/install/core.entity_form_display.node.os2web_meetings_meeting.default.yml
+++ b/config/install/core.entity_form_display.node.os2web_meetings_meeting.default.yml
@@ -1,4 +1,4 @@
-langcode: en
+langcode: da
 status: true
 dependencies:
   config:
@@ -16,9 +16,11 @@ dependencies:
     - field.field.node.os2web_meetings_meeting.field_os2web_m_type
     - node.type.os2web_meetings_meeting
   module:
+    - content_moderation
     - datetime
     - file
     - path
+    - scheduler
     - text
 id: node.os2web_meetings_meeting.default
 targetEntityType: node
@@ -132,6 +134,19 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  langcode:
+    type: language_select
+    weight: 2
+    region: content
+    settings:
+      include_locked: true
+    third_party_settings: {  }
+  moderation_state:
+    type: moderation_state_default
+    weight: 100
+    settings: {  }
+    region: content
+    third_party_settings: {  }
   path:
     type: path
     weight: 30
@@ -144,6 +159,12 @@ content:
       display_label: true
     weight: 15
     region: content
+    third_party_settings: {  }
+  publish_on:
+    type: datetime_timestamp_no_default
+    weight: 30
+    region: content
+    settings: {  }
     third_party_settings: {  }
   status:
     type: boolean_checkbox
@@ -176,5 +197,11 @@ content:
       placeholder: ''
       match_limit: 10
     region: content
+    third_party_settings: {  }
+  unpublish_on:
+    type: datetime_timestamp_no_default
+    weight: 30
+    region: content
+    settings: {  }
     third_party_settings: {  }
 hidden: {  }
