--- a/config/install/core.entity_form_display.taxonomy_term.os2web_m_location.default.yml
+++ b/config/install/core.entity_form_display.taxonomy_term.os2web_m_location.default.yml
@@ -1,4 +1,4 @@
-langcode: en
+langcode: da
 status: true
 dependencies:
   config:
@@ -28,6 +28,13 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  langcode:
+    type: language_select
+    weight: 2
+    region: content
+    settings:
+      include_locked: true
+    third_party_settings: {  }
   name:
     type: string_textfield
     weight: -5
