--- a/config/install/core.entity_view_display.node.os2web_meetings_bpa.default.yml
+++ b/config/install/core.entity_view_display.node.os2web_meetings_bpa.default.yml
@@ -1,4 +1,4 @@
-langcode: en
+langcode: da
 status: true
 dependencies:
   config:
@@ -43,4 +43,5 @@ content:
     settings: {  }
     third_party_settings: {  }
     region: content
-hidden: {  }
+hidden:
+  langcode: true
