--- a/config/install/core.entity_view_display.node.os2web_meetings_meeting.default.yml
+++ b/config/install/core.entity_view_display.node.os2web_meetings_meeting.default.yml
@@ -1,4 +1,4 @@
-langcode: en
+langcode: da
 status: true
 dependencies:
   config:
@@ -17,114 +17,69 @@ dependencies:
     - node.type.os2web_meetings_meeting
   module:
     - datetime
-    - file
-    - text
     - user
 id: node.os2web_meetings_meeting.default
 targetEntityType: node
 bundle: os2web_meetings_meeting
 mode: default
 content:
-  body:
-    label: hidden
-    type: text_default
-    weight: 101
-    settings: {  }
-    third_party_settings: {  }
-    region: content
-  field_os2web_m_addendum:
-    weight: 111
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_os2web_m_bps:
-    weight: 102
-    label: above
+    weight: 5
+    label: hidden
     settings:
-      link: true
+      view_mode: teaser
+      link: false
     third_party_settings: {  }
-    type: entity_reference_label
+    type: entity_reference_entity_view
     region: content
   field_os2web_m_committee:
-    weight: 104
-    label: above
+    weight: 3
+    label: inline
     settings:
-      link: true
+      link: false
     third_party_settings: {  }
     type: entity_reference_label
     region: content
-  field_os2web_m_doc:
-    weight: 109
-    label: above
-    settings:
-      use_description_as_link_text: true
-    third_party_settings: {  }
-    type: file_default
-    region: content
   field_os2web_m_end_date:
-    weight: 107
-    label: above
+    weight: 2
+    label: hidden
     settings:
-      format_type: medium
       timezone_override: ''
+      format_type: short
     third_party_settings: {  }
     type: datetime_default
     region: content
-  field_os2web_m_esdh_id:
-    weight: 103
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
   field_os2web_m_location:
-    weight: 105
-    label: above
+    weight: 4
+    label: inline
     settings:
-      link: true
+      link: false
     third_party_settings: {  }
     type: entity_reference_label
     region: content
-  field_os2web_m_meet_id:
-    weight: 110
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-  field_os2web_m_source:
-    weight: 112
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
   field_os2web_m_start_date:
-    weight: 106
-    label: above
+    weight: 1
+    label: hidden
     settings:
-      format_type: medium
       timezone_override: ''
+      format_type: short
     third_party_settings: {  }
     type: datetime_default
     region: content
   field_os2web_m_type:
-    weight: 108
-    label: above
+    weight: 0
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
     type: string
     region: content
-  links:
-    weight: 100
-    settings: {  }
-    third_party_settings: {  }
-    region: content
-hidden: {  }
+hidden:
+  body: true
+  field_os2web_m_addendum: true
+  field_os2web_m_doc: true
+  field_os2web_m_esdh_id: true
+  field_os2web_m_meet_id: true
+  field_os2web_m_source: true
+  langcode: true
+  links: true
