--- a/config/install/core.entity_view_display.taxonomy_term.os2web_m_committee.default.yml
+++ b/config/install/core.entity_view_display.taxonomy_term.os2web_m_committee.default.yml
@@ -1,4 +1,4 @@
-langcode: en
+langcode: da
 status: true
 dependencies:
   config:
@@ -26,4 +26,5 @@ content:
     third_party_settings: {  }
     type: string
     region: content
-hidden: {  }
+hidden:
+  langcode: true
