--- a/config/install/field.field.node.os2web_meetings_bp.field_os2web_m_bp_enclosures.yml
+++ b/config/install/field.field.node.os2web_meetings_bp.field_os2web_m_bp_enclosures.yml
@@ -2,15 +2,15 @@ langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.node.field_os2web_m_doc
-    - node.type.os2web_meetings_meeting
+    - field.storage.node.field_os2web_m_bp_enclosures
+    - node.type.os2web_meetings_bp
   module:
     - file
-id: node.os2web_meetings_meeting.field_os2web_m_doc
-field_name: field_os2web_m_doc
+id: node.os2web_meetings_bp.field_os2web_m_bp_enclosures
+field_name: field_os2web_m_bp_enclosures
 entity_type: node
-bundle: os2web_meetings_meeting
-label: Document
+bundle: os2web_meetings_bp
+label: Enclosures
 description: ''
 required: false
 translatable: false
@@ -18,9 +18,9 @@ default_value: {  }
 default_value_callback: ''
 settings:
   file_directory: '[date:custom:Y]-[date:custom:m]'
-  file_extensions: 'pdf doc docx odt ods xls xlsx ppt pptx html'
+  file_extensions: 'pdf docx doc ppt pptx xls xlsx'
   max_filesize: ''
-  description_field: false
+  description_field: true
   handler: 'default:file'
   handler_settings: {  }
 field_type: file
