--- a/config/install/field.storage.node.field_os2web_m_location.yml
+++ b/config/install/field.storage.node.field_os2web_m_location.yml
@@ -1,12 +1,12 @@
-langcode: en
+langcode: da
 status: true
 dependencies:
-  module:
-    - node
-    - taxonomy
   enforced:
     module:
       - os2web_meetings
+  module:
+    - node
+    - taxonomy
 id: node.field_os2web_m_location
 field_name: field_os2web_m_location
 entity_type: node
