--- a/config/install/node.type.os2web_meetings_bp.yml
+++ b/config/install/node.type.os2web_meetings_bp.yml
@@ -1,20 +1,33 @@
-langcode: en
+langcode: da
 status: true
 dependencies:
-  module:
-    - menu_ui
   enforced:
     module:
       - os2web_meetings
+  module:
+    - menu_ui
+    - scheduler
 third_party_settings:
   menu_ui:
     available_menus:
       - main
     parent: 'main:'
+  scheduler:
+    expand_fieldset: when_required
+    fields_display_mode: vertical_tab
+    publish_enable: false
+    publish_past_date: error
+    publish_past_date_created: false
+    publish_required: false
+    publish_revision: false
+    publish_touch: false
+    unpublish_enable: false
+    unpublish_required: false
+    unpublish_revision: false
 name: 'OS2Web Bullet point'
 type: os2web_meetings_bp
 description: ''
 help: ''
 new_revision: true
 preview_mode: 1
-display_submitted: true
+display_submitted: false
