--- a/config/install/core.entity_view_display.node.os2web_meetings_meeting.default.yml
+++ b/config/install/core.entity_view_display.node.os2web_meetings_meeting.default.yml
@@ -45,7 +45,7 @@ content:
     label: hidden
     settings:
       timezone_override: ''
-      format_type: short
+      format_type: os2core_datetime_medium
     third_party_settings: {  }
     type: datetime_default
     region: content
@@ -62,7 +62,7 @@ content:
     label: hidden
     settings:
       timezone_override: ''
-      format_type: short
+      format_type: os2core_datetime_medium
     third_party_settings: {  }
     type: datetime_default
     region: content
@@ -83,3 +83,4 @@ hidden:
   field_os2web_m_source: true
   langcode: true
   links: true
+  search_api_excerpt: true
