--- a/os2web_meetings.links.menu.yml
+++ b/os2web_meetings.links.menu.yml
@@ -2,4 +2,4 @@ os2web_meetings.settings:
   title: OS2Web Meetings settings
   description: Settings for OS2Web Meetings.
   route_name: os2web_meetings.settings_form
-  parent: system.admin_config_content
+  parent: system.admin_config_system
