--- a/config/install/field.field.node.os2web_meetings_meeting.field_os2web_m_start_date.yml
+++ b/config/install/field.field.node.os2web_meetings_meeting.field_os2web_m_start_date.yml
@@ -12,7 +12,7 @@ entity_type: node
 bundle: os2web_meetings_meeting
 label: 'Start date'
 description: ''
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
