Exporting autocomplete settings

--- a/modules/os2web_meetings_search/config/optional/views.view.os2web_meetings_search_page.yml
+++ b/modules/os2web_meetings_search/config/optional/views.view.os2web_meetings_search_page.yml
@@ -236,7 +236,7 @@ display:
             group_items: {  }
           plugin_id: search_api_language
       sorts: {  }
-      title: 'OS2Web Meetings Search page'
+      title: 'Møde søgning'
       header:
         area:
           id: area
