--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "license": "EUPL-1.2",
     "require": {
         "drupal/migrate_plus": "^4.2",
-        "drupal/migrate_tools": "^4.5"
+        "drupal/migrate_tools": "^4.5",
+        "drupal/printable": "^2.0"
     }
 }
