--- a/config/optional/views.view.os2web_meetings_search.yml
+++ b/config/optional/views.view.os2web_meetings_search.yml
@@ -53,7 +53,7 @@ display:
           expose_sort_order: true
           sort_asc_label: Asc
           sort_desc_label: Desc
-          text_input_required: 'Select any filter and click on Apply to see results'
+          text_input_required: ''
           text_input_required_format: wysiwyg_tekst
           bef:
             general:
@@ -66,17 +66,14 @@ display:
               secondary_label: 'Advanced options'
               secondary_open: false
             filter:
-              field_os2web_m_start_date_value_1:
-                plugin_id: bef_datepicker
+              field_os2web_m_committee_target_id:
+                plugin_id: default
                 advanced:
+                  rewrite:
+                    filter_rewrite_values: ''
                   collapsible: false
                   is_secondary: false
               field_os2web_m_start_date_value:
-                plugin_id: bef_datepicker
-                advanced:
-                  collapsible: false
-                  is_secondary: false
-              field_os2web_m_committee_target_id:
                 plugin_id: default
                 advanced:
                   rewrite:
@@ -86,10 +83,13 @@ display:
       pager:
         type: mini
         options:
-          items_per_page: 10
+          items_per_page: 8
           offset: 0
           id: 0
           total_pages: null
+          tags:
+            previous: ‹‹
+            next: ››
           expose:
             items_per_page: false
             items_per_page_label: 'Items per page'
@@ -98,9 +98,6 @@ display:
             items_per_page_options_all_label: '- All -'
             offset: false
             offset_label: Offset
-          tags:
-            previous: ‹‹
-            next: ››
       style:
         type: default
         options:
@@ -566,12 +563,53 @@ display:
         filters: false
         filter_groups: false
         header: false
+        exposed_form: false
       filter_groups:
         operator: AND
         groups:
           1: AND
       header: {  }
       display_description: 'Search view with from and to dates to filter on'
+      exposed_form:
+        type: bef
+        options:
+          submit_button: Udfør
+          reset_button: false
+          reset_button_label: Reset
+          exposed_sorts_label: 'Sort by'
+          expose_sort_order: true
+          sort_asc_label: Asc
+          sort_desc_label: Desc
+          text_input_required: ''
+          text_input_required_format: wysiwyg_tekst
+          bef:
+            general:
+              autosubmit: false
+              autosubmit_exclude_textfield: false
+              autosubmit_textfield_delay: 500
+              autosubmit_hide: true
+              input_required: true
+              allow_secondary: false
+              secondary_label: 'Advanced options'
+              secondary_open: false
+            filter:
+              field_os2web_m_start_date_value_1:
+                plugin_id: bef_datepicker
+                advanced:
+                  collapsible: false
+                  is_secondary: false
+              field_os2web_m_start_date_value:
+                plugin_id: bef_datepicker
+                advanced:
+                  collapsible: false
+                  is_secondary: false
+              field_os2web_m_committee_target_id:
+                plugin_id: default
+                advanced:
+                  rewrite:
+                    filter_rewrite_values: ''
+                  collapsible: false
+                  is_secondary: false
     cache_metadata:
       max-age: -1
       contexts:
