RINGSTED-172,196 adding fields Case, BP committee name

--- a/config/optional/config_split.config_split.os2web_meetings.yml
+++ b/config/optional/config_split.config_split.os2web_meetings.yml
@@ -11,6 +11,9 @@ blacklist:
   - 'os2web_meetings*'
   - '*os2web_meetings'
   - '*os2web_meetings*'
+  - 'os2web_m_*'
+  - '*os2web_m_*'
+  - 'os2web_m_*'
 graylist: {  }
 graylist_dependents: false
 graylist_skip_equal: false
